Implement the contact page

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,16 +17,18 @@
     --input-color: hsl(var(--hue-color), 70%, 96%);
 
     --text-color: #ECF8FF;
+    --text-shadow: rgba(188, 251, 195, 0.3);
     --text-color-shadow: #B8C1C7;
     --body-color: #111A20;
     --body-color-light: #1C2C35;
+    --border-color: rgba(124, 201, 255, 0.41);
 
     /*========== Font and typography ==========*/
     --body-font: 'Jost', sans-serif;
 
     --big-font-size: 3rem;
     --normal-font-size: 1.5rem;
-    --small-font-size: .813rem;
+    --small-font-size: 1rem;
 
     --font-medium: 500;
     --font-semi-bold: 700;
@@ -85,10 +87,51 @@ img {
     height: auto;
 }
 
+small {
+    color: var(--text-color-shadow);
+    font-size: var(--small-font-size);
+}
+
+textarea,
+input {
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    margin: 0;
+    padding: 0.375rem 0.75rem;
+    border-radius: .2rem;
+    border: none;
+    background-color: var(--text-color);
+    transition: all 0.2s ease;
+}
+
+textarea:focus,
+input:focus {
+    color: var(--body-color);
+    outline: 0;
+    box-shadow: 0 0 0 .2rem var(--border-color);
+}
+
+textarea {
+    resize: none;
+}
+
+
 /*==================== REUSABLE ====================*/
 .container {
     display: flex;
     flex-direction: column;
+}
+
+.title {
+    font-size: var(--big-font-size);
+    line-height: 4rem;
+    text-shadow: 0 0 2.5rem var(--text-shadow);
+    margin-bottom: var(--mb-2);
+}
+
+.text {
+    margin-bottom: var(--mb-3);
 }
 
 /*==================== HEADER ====================*/
@@ -111,6 +154,10 @@ img {
     margin-left: 2rem;
 }
 
+.nav__link.active {
+    color: var(--first-color);
+}
+
 .nav__link {
     color: var(--text-color);
     transition: all 400ms ease;
@@ -121,7 +168,7 @@ img {
 }
 
 .nav__contact {
-    border: 2px solid rgba(124, 201, 255, 0.41);
+    border: 2px solid var(--border-color);
     padding: 8px;
     border-radius: .5rem;
 }
@@ -135,17 +182,6 @@ img {
 
 .greetings__data {
     margin-right: 3rem;
-}
-
-.greetings__title {
-    font-size: var(--big-font-size);
-    line-height: 4rem;
-    text-shadow: 0 0 2.5rem rgba(188, 251, 195, 0.3);
-    margin-bottom: var(--mb-2);
-}
-
-.greetings__description {
-    margin-bottom: var(--mb-3);
 }
 
 .greetings__circle {
@@ -245,6 +281,18 @@ img {
 
 .pinned__card__tag {
     color: var(--first-color);
+}
+
+/*==================== CONTACT ====================*/
+.contact {
+    margin: 10rem 13rem 0 13rem;
+}
+
+.form__input {
+    display: grid;
+    grid-row-gap: .9rem;
+    flex-direction: column;
+    margin-bottom: 2rem;
 }
 
 /*==================== FOOTER ====================*/
