--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,31 @@ td, th {
     border-bottom: 1px solid #ddd;
 }
 
+button {
+    display: inline-block;
+    background-color: var(--first-color);
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    color: var(--text-color);
+    padding: 1rem;
+    border-radius: .5rem;
+    font-weight: var(--font-medium);
+    transition: all 400ms ease;
+    border: none;
+}
+
+button:hover {
+    background-color: var(--first-color-alt);
+}
+
+button.positive {
+    background-color: forestgreen;
+}
+
+button.positive:hover {
+    background-color: green;
+}
+
 /*==================== REUSABLE ====================*/
 .container {
     display: flex;
@@ -447,32 +472,4 @@ td, th {
     text-shadow: 0 0 2.5rem darkgreen;
     margin-bottom: var(--mb-2-5);
     align-self: center;
-}
-
-/*==================== BUTTONS ====================*/
-.button {
-    display: inline-block;
-    background-color: var(--first-color);
-    color: var(--text-color);
-    padding: 1rem;
-    border-radius: .5rem;
-    font-weight: var(--font-medium);
-    transition: all 400ms ease;
-}
-
-.button.positive {
-    background-color: forestgreen;
-}
-
-.button:hover {
-    background-color: var(--first-color-alt);
-}
-
-.button.positive:hover {
-    background-color: green;
-}
-
-.button--flex {
-    display: inline-flex;
-    align-items: center;
 }
